@@ -5,6 +5,7 @@ Features
 Bug Fixes
 * Ensure nested structure arrays initialized with Structure.toArray use the
   appropriate native memory.
+* Ensure structure size is calculated prior to converting to array
 
 Release 3.0
 Features
